# tycho

./: .taplo.toml  BASELINE_MERCURY_TYCHO_SCOPE.md  CHANGELOG.md  Cargo.toml  check-base-storage-range.sh  marketing-examples-slider.html
.claude/: CODEBASE.md
.github/workflows/: README.md  ci-foundry.yaml  ci-rust-evm.yaml  ci-rust.yaml  release.yaml
baseline-fixtures/reppo/: README.md  quote_buy_exact_in.out  quote_buy_exact_in_prestate.json  quote_sell_exact_in.out
baseline-mercury-fixtures/: trace_reppo_quotes.sh
baseline-mercury-fixtures/reppo/: README.md  fixture.json  quote_sell_exact_in_prestate.json
crates/tycho/: build.rs
crates/tycho-client/: CLAUDE.md
crates/tycho-common/: Cargo.toml
crates/tycho-execution/: CLAUDE.md  README.md
crates/tycho-indexer/: Cargo.toml
crates/tycho-integration-test/: CLAUDE.md
crates/tycho-simulation/: Cargo.toml  README.md
protocols/: runtest.sh
protocols/substreams/base-lunarbase/: Cargo.toml  README.md  base-lunarbase.yaml  build.rs  integration_test.tycho.yaml
protocols/substreams/base-lunarbase/abi/: Pool.json
protocols/substreams/base-lunarbase/src/: lib.rs  tycho_mapper.rs
protocols/substreams/base-lunarbase/src/abi/: mod.rs  pool.rs
protocols/substreams/base-lunarbase/src/lunarbase/: attributes.rs  component.rs  decoder.rs  events.rs  evm_log.rs  indexed.rs  mod.rs  state.rs
protocols/substreams/base-lunarbase/src/modules/: 1_map_protocol_components.rs  2_store_protocol_components.rs  3_map_protocol_changes.rs  mod.rs
protocols/substreams/ethereum-baseline/: Cargo.toml  build.rs  integration_test.tycho.yaml  integration_test_base_baseline.tycho.yaml  substreams.yaml
protocols/substreams/ethereum-baseline/abi/: BController.json  BFactory.json  BSwap.json
protocols/substreams/ethereum-baseline/src/: modules.rs  pool_factories.rs
protocols/substreams/ethereum-baseline/src/abi/: b_controller.rs  b_factory.rs  b_swap.rs  mod.rs
protocols/substreams/ethereum-baseline/src/modules/: balances.rs  dci.rs  mod.rs  quote_state.rs
protocols/substreams/ethereum-baseline/src/pb/: .last_generated_hash
protocols/substreams/ethereum-bopamm/: Cargo.toml  HANDOVER.md  integration_test.tycho.yaml  substreams.yaml
protocols/substreams/ethereum-bopamm/src/: common.rs  config.rs  lib.rs
protocols/substreams/ethereum-bopamm/src/modules/: map_components.rs  map_protocol_changes.rs  map_relative_balances.rs  mod.rs  store_balances.rs  store_components.rs  store_maker.rs
protocols/substreams/ethereum-fermiswap/: Cargo.toml  integration_test.tycho.yaml  substreams.yaml
protocols/substreams/ethereum-fermiswap/abi/: fermi.abi.json  registry.json
protocols/substreams/ethereum-fermiswap/proto/v1/: fermiswap.proto
protocols/substreams/ethereum-fermiswap/src/: lib.rs  modules.rs  pool_factories.rs  utils.rs
protocols/substreams/ethereum-fermiswap/src/abi/: fermi.rs  mod.rs  registry.rs
protocols/substreams/ethereum-fermiswap/src/pb/: .last_generated_hash  fermiswap.v1.rs  mod.rs
protocols/substreams/ethereum-ring-swap-v2/: Cargo.toml  build.rs  ethereum-ring-swap-v2.yaml  integration_test.tycho.yaml
protocols/substreams/ethereum-ring-swap-v2/abi/: ERC20.json  FewWrappedToken.json
protocols/substreams/ethereum-ring-swap-v2/src/abi/: erc20.rs  few_wrapped_token.rs  mod.rs
protocols/substreams/ethereum-ring-swap-v2/src/modules/: 1_map_pool_created.rs  3_map_pool_events.rs
(+363 files in other folders)
