[package]
name = "ethereum-baseline"
version = "0.1.0"
edition = "2021"

[lib]
name = "ethereum_baseline"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5.22"
substreams-ethereum = "0.9.9"
tycho-substreams = "0.8.0"
anyhow = "1.0.95"
ethabi = "18.0.0"
hex = { version = "0.4", features = ["serde"] }
itertools = "0.10.5"
num-bigint = "0.4.6"
serde = { version = "1.0.217", features = ["derive"] }
serde_qs = "0.13.0"


[build-dependencies]
anyhow = "1"
serde_json = "1.0"
substreams-ethereum = "0.9.9"
