[package]
name = "ethereum-bopamm"
version = "0.1.0"
edition = "2021"

[lib]
name = "ethereum_bopamm"
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = "0.5.22"
substreams-ethereum = "0.9.9"
ethabi = "18.0.0"
hex = { version = "0.4.3", features = ["serde"] }
anyhow = "1.0.75"
tycho-substreams = "0.8.0"
itertools = "0.13.0"
keccak-hash = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.13.0"

# Required so that transitive crates build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }
