[package]
name = "ethereum-ring-swap-v2"
version = "0.1.0"
edition = "2021"

[lib]
name = "ethereum_ring_swap_v2"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5.22"
substreams-ethereum = "0.9.9"
ethabi = "18.0.0"
substreams-helper = { git = "https://github.com/propeller-heads/tycho-protocol-sdk.git", rev = "b8aeaa3" }
tycho-substreams = "0.8.0"
num-bigint = "0.4.4"
itertools = "0.12.1"
serde_qs = "0.13.0"
serde = "1.0.204"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1.0.75"
substreams-ethereum = "0.9.9"
